--- a/public/style.css
+++ b/public/style.css
@@ -1,8 +1,12 @@
-body, html{
-    max-height: 100vh;
+html{
+    max-height: 100%;
     /* width: 100%; */
+    width: 100%;
+    
 }
-
+body{
+  height: 100%;
+}
 body::-webkit-scrollbar{
     -webkit-overflow-scrolling: none;
 }
@@ -12,7 +16,9 @@ body {
     margin: 0;
     height: 100vh;
     overflow: hidden;
+    
   }
+  
   
   @supports (padding: max(0px)) {
     body {
