--- a/src/components/Welcome.scss
+++ b/src/components/Welcome.scss
@@ -5,7 +5,7 @@
     background: #F4F5FA;
     // align-items: center;
     
-    height: 100vh;
+    height: 100%;
     .header-chat{
         height: 50px;
         display: flex;
